--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+/* Body Styles */
+body {
+  font-family: 'Titillium Web', sans-serif;
+  margin: 0;
+}
+
+/* Navbar Styles */
+nav {
+  background-color: #557a95;
+  color: white;
+  padding: 5px 0 5px 5px;
+}
+
+/* Input Form Styles */
 .inputForm {
   display: grid;
   grid-template-columns: auto auto;
@@ -5,4 +19,17 @@
 
 .inputForm ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.inputFormLeft {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputFormRight {
+  display: flex;
+  justify-content: left;
 }
